<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_cyber_glove_retarget_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 package for OpenCyberGlove retargeting</description>
  <maintainer email="jessey.li@cyberorigin.ai">zimo</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
